--- a/src/app/system/bill-psge/currency-card/currency-card.component.html
+++ b/src/app/system/bill-psge/currency-card/currency-card.component.html
@@ -7,28 +7,23 @@
       <div class="row row-sm stats-container">
         <table class="table table-hover">
           <thead>
-          <tr>
-            <th>Валюта</th>
-            <th>Курс</th>
-            <th>Дата</th>
-          </tr>
+            <tr>
+              <th>Валюта</th>
+              <th>Курс</th>
+              <th>Дата</th>
+            </tr>
           </thead>
           <tbody>
-          <tr>
-            <td>доллар</td>
-            <td>24</td>
-            <td>12.12.2017</td>
-          </tr>
-          <tr>
-            <td>евро</td>
-            <td>26</td>
-            <td>12.12.2017</td>
-          </tr>
-          <tr>
-            <td>рубль</td>
-            <td>0.4</td>
-            <td>12.12.2017</td>
-          </tr>
+            <tr>
+              <td>доллар</td>
+              <td>{{usd | number:'1.2-2'}}</td>
+              <td>{{date | date:'dd.MM.yyyy'}}</td>
+            </tr>
+            <tr>
+              <td>евро</td>
+              <td>{{eur | number:'1.2-2'}}</td>
+              <td>{{date | date:'dd.MM.yyyy'}}</td>
+            </tr>
           </tbody>
         </table>
       </div>
