--- a/src/app/system/history-psge/history-events/history-events.component.html
+++ b/src/app/system/history-psge/history-events/history-events.component.html
@@ -8,18 +8,22 @@
           </div>
           <div class="form-inline pull-right m-r-2">
             <div class="form-group">
-              <input type="email" class="form-control" placeholder="Поиск...">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="{{searchPlaceholder}}"
+                [(ngModel)]="searchValue"
+              >
             </div>
-            <div class="btn-group">
+            <div class="btn-group" dropdownEvent>
               <button type="button" class="btn btn-secondary dropdown-toggle ">
                 Параметр
               </button>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">Action</a>
-                <a class="dropdown-item" href="#">Another action</a>
-                <a class="dropdown-item" href="#">Something else here</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#">Separated link</a>
+                <a class="dropdown-item" (click)="changeCriteria('amount')">Сумма</a>
+                <a class="dropdown-item" (click)="changeCriteria('date')">Дата</a>
+                <a class="dropdown-item" (click)="changeCriteria('category')">Категория</a>
+                <a class="dropdown-item" (click)="changeCriteria('type')">Тип</a>
               </div>
             </div>
           </div>
@@ -37,25 +41,13 @@
             </tr>
             </thead>
             <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>44 444</td>
-              <td>12.12.2017</td>
-              <td>Товары</td>
+            <tr *ngFor="let event of events | filterEvents:searchValue:searchField; let index = index">
+              <th scope="row">{{index + 1}}</th>
+              <td>{{event.amount}}</td>
+              <td>{{event.date}}</td>
+              <td>{{event.catName}}</td>
               <td>
-                <span class="label label-danger">Расход</span>
-              </td>
-              <td class="text-lg-center">
-                <a href="#" class="btn btn-primary-outline">Открыть</a>
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>33 333</td>
-              <td>12.12.2017</td>
-              <td>Отдых</td>
-              <td>
-                <span class="label label-success">Доход</span>
+                <span class="label {{getEventClass(event)}}">{{event.type === 'outcome' ? 'Расход' : 'Доход'}}</span>
               </td>
               <td class="text-lg-center">
                 <a href="#" class="btn btn-primary-outline">Открыть</a>
