--- a/src/app/system/history-psge/history-page.component.html
+++ b/src/app/system/history-psge/history-page.component.html
@@ -15,7 +15,10 @@
 >
   <app-history-chart [data]="chartData"></app-history-chart>
 
-  <app-history-events></app-history-events>
+  <app-history-events
+    [categories]="categories"
+    [events]="events"
+  ></app-history-events>
 
   <app-history-filter></app-history-filter>
 </div>
