add finish logic pages and guard

--- a/src/app/system/header/header.component.html
+++ b/src/app/system/header/header.component.html
@@ -16,7 +16,7 @@
             Сделать запись
           </a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item">
+          <a class="dropdown-item" (click)="logout()">
             <i class="fa fa-power-off icon"></i>
             Выйти
           </a>
