--- a/src/app/system/records-psge/records-psge.component.html
+++ b/src/app/system/records-psge/records-psge.component.html
@@ -7,7 +7,7 @@
   *ngIf="!isLoaded"
   class="section text-center"
 >
-  Loading ...
+  <app-loader></app-loader>
 </section>
 <section
   *ngIf="isLoaded"
